<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.tata.motors.view_customer.view.ViewCustomerFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="10dp"

        >

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBarLayout"
            android:layout_gravity="center"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="4dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <TextView
                        android:id="@+id/customer_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"
                        android:textSize="18dp"
                        android:paddingBottom="10dp"
                        android:paddingEnd="4dp"
                        android:paddingStart="4dp"
                        android:paddingTop="10dp"
                        />


                <TextView
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_address"
                        android:textSize="18dp"
                        android:paddingBottom="10dp"
                        android:paddingEnd="4dp"
                        android:paddingStart="4dp"
                        android:paddingTop="10dp"
                        />


                <TextView
                        android:id="@+id/mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_mobile"
                        android:textSize="18dp"
                        android:paddingBottom="10dp"
                        android:paddingEnd="4dp"
                        android:paddingStart="4dp"
                        android:paddingTop="10dp"
                        />



                <TextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:textSize="18dp"
                        android:paddingBottom="10dp"
                        android:paddingEnd="4dp"
                        android:paddingStart="4dp"
                        android:paddingTop="10dp"
                        />



                <TextView
                    android:id="@+id/application"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/application"
                    android:textSize="18dp"
                    android:paddingBottom="10dp"
                    android:paddingEnd="4dp"
                    android:paddingStart="4dp"
                    android:paddingTop="10dp"
                    />

                <TextView
                        android:id="@+id/district"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/district"
                        android:textSize="18dp"
                        android:paddingBottom="10dp"
                        android:paddingEnd="4dp"
                        android:paddingStart="4dp"
                        android:paddingTop="10dp"
                        />


                <TextView
                        android:id="@+id/town"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/town"
                        android:textSize="18dp"
                        android:paddingBottom="10dp"
                        android:paddingEnd="4dp"
                        android:paddingStart="4dp"
                        android:paddingTop="10dp"
                        />

                <TextView
                        android:id="@+id/tehsil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_tehsil"
                        android:textSize="18dp"
                        android:paddingBottom="10dp"
                        android:paddingEnd="4dp"
                        android:paddingStart="4dp"
                        android:paddingTop="10dp"
                        />

                <TextView
                        android:id="@+id/financier"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/financier"
                        android:textSize="18dp"
                        android:paddingBottom="10dp"
                        android:paddingEnd="4dp"
                        android:paddingStart="4dp"
                        android:paddingTop="10dp"
                        />

                <TextView
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textSize="18dp"
                        android:paddingBottom="10dp"
                        android:paddingEnd="4dp"
                        android:paddingStart="4dp"
                        android:paddingTop="10dp"
                        />


                <TextView
                        android:id="@+id/status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textSize="18dp"
                        android:paddingBottom="10dp"
                        android:paddingEnd="4dp"
                        android:paddingStart="4dp"
                        android:paddingTop="10dp"
                        />
                <TextView
                    android:id="@+id/follow_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_follow_up"
                    android:textSize="18dp"
                    android:paddingBottom="10dp"
                    android:paddingEnd="4dp"
                    android:paddingStart="4dp"
                    android:paddingTop="10dp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorAccent"
                    >

                </View>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recycler_view_customer"
                    >


                </android.support.v7.widget.RecyclerView>

                <ProgressBar
                    android:id="@+id/submitBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible" />





                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    >
                    <Button
                        android:id="@+id/button_edit"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingBottom="10dp"
                        android:paddingEnd="4dp"
                        android:paddingStart="4dp"
                        android:paddingTop="10dp"
                        android:text="Edit"
                        android:textColor="#FFFFFF"
                        android:textSize="20dp"
                        android:layout_marginRight="4dp"
                        android:background="@drawable/default_button"
                        />
                    <Button
                        android:id="@+id/button_follow_up"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingBottom="10dp"
                        android:paddingEnd="4dp"
                        android:paddingStart="4dp"
                        android:paddingTop="10dp"
                        android:text="Follow Up"
                        android:textColor="#FFFFFF"
                        android:textSize="20dp"
                        android:layout_marginLeft="4dp"
                        android:background="@drawable/default_button" />

                </LinearLayout>




            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>


</FrameLayout>
