<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.tata.motors.add_customer.view.AddCustomerFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp"

        >

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBarLayout"
            android:layout_gravity="center"
            android:layout_margin="15dp"

            >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/dsm"
                    android:textSize="18dp"
                    android:paddingEnd="2dp"
                    />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dsm_spinner"
                    android:layout_gravity="center"
                    android:textSize="18dp"


                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/dse"
                    android:textSize="18dp"
                    android:paddingEnd="2dp"
                    />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dse_spinner"
                    android:layout_gravity="center"
                    android:textSize="18dp"


                    />

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/customer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/application"
                    android:textSize="18dp"
                    android:paddingEnd="2dp"
                    />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/application_spinner"
                    android:layout_gravity="center"
                    android:textSize="18dp"


                    />

            </LinearLayout>




            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_mobile"
                    android:inputType="phone"
                    android:maxLength="10" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/district"
                    android:textSize="18dp"
                    android:paddingEnd="2dp"
                    />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/district_spinner"
                    android:layout_gravity="center"
                    android:textSize="18dp"


                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/town"
                    android:textSize="18dp"
                    android:paddingEnd="2dp"
                    />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/town_spinner"
                    android:layout_gravity="center"
                    android:textSize="18dp"


                    />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tehsil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_tehsil"


                    />

            </android.support.design.widget.TextInputLayout>






            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/model_interested"
                    android:textSize="18dp"
                    android:paddingEnd="2dp"
                    />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/model_spinner"
                    android:layout_gravity="center"
                    android:textSize="18dp"


                    />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_quantity"
                    android:inputType="number"

                    />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/vehicle"
                    android:textSize="18dp"
                    android:paddingEnd="2dp"
                    />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/vehicle_spinner"
                    android:layout_gravity="center"
                    android:textSize="18dp"


                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/financier"
                    android:textSize="18dp"
                    android:paddingEnd="2dp"
                    />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/financier_spinner"
                    android:layout_gravity="center"
                    android:textSize="18dp"


                    />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/follow_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_follow_up"
                    android:inputType="number"

                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/submitButton"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="#000000"
                android:textSize="20dp"
                android:layout_marginBottom="30dp"

                />
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submitBar"
                android:layout_gravity="center"
                android:visibility="gone"
                />


        </LinearLayout>

    </ScrollView>

    </android.support.v7.widget.CardView>

</FrameLayout>
